[package]
name = "rdownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
loading = "0.3.0"
exitcode = "1.1.2"
regex = "1"
bytes = "1.1.0"
